# degicali_api

./: README.md  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: chat.py  community.py  goods.py  goods_user.py  user.py
api/models/: chat.py  community.py  goods.py  goods_user.py  user.py
api/routers/: chat.py  community.py  goods.py  goods_user.py  user.py
api/schemas/: chat.py  community.py  goods.py  goods_user.py  user.py
